--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		</div>
     </div>
     
-    <script src="src/index.js"></script>
+    <script src="./dist/main.js"></script>
 </body>
 
 </html>
